# revo-dataengineering-challenge

./: .dockerignore  .env.example  .gitignore  README.md  data_engineering_challenge_python.md  docker-compose.yml  dockerfile  odin_full_presentation.pptx  pyproject.toml  task-definition.json  ~$odin_full_presentation.pptx
config/: source.py
data/: mobility_metadata.csv
sql/: dim_tables.sql  fact_table.sql
sql/tasks/: task3_query1.sql  task3_query2.sql  task3_query3.sql  task3_query4.sql
src/: datasource.py  etl.py  loader.py  main.py  parser.py  transformer.py  validator.py
test/: test_datasource.py  test_loader.py  test_parser.py  test_transformer.py  test_validator.py
